add ui config in core
